--- a/frontend/src/index.mempool.bitb.html
+++ b/frontend/src/index.mempool.bitb.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://luckyscan.org/resources/bitb/bitb-preview.jpg"
+      content="https://xbtscan.org/resources/bitb/bitb-preview.jpg"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="2000" />
@@ -32,7 +32,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://luckyscan.org/resources/bitb/bitb-preview.jpg"
+      content="https://xbtscan.org/resources/bitb/bitb-preview.jpg"
     />
     <meta name="twitter:domain" content="bitwise.mempool.space" />
 
