--- a/frontend/src/index.mempool.html
+++ b/frontend/src/index.mempool.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://luckyscan.org/resources/previews/mempool-space-preview.jpg"
+      content="https://xbtscan.org/resources/previews/mempool-space-preview.jpg"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="2000" />
@@ -32,7 +32,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://luckyscan.org/resources/previews/mempool-space-preview.jpg"
+      content="https://xbtscan.org/resources/previews/mempool-space-preview.jpg"
     />
     <meta name="twitter:domain" content="mempool.space" />
 
@@ -55,7 +55,7 @@
     />
     <link rel="manifest" href="/resources/favicons/site.webmanifest" />
     <link rel="shortcut icon" href="/resources/favicons/favicon.ico" />
-    <link id="canonical" rel="canonical" href="https://luckyscan.org" />
+    <link id="canonical" rel="canonical" href="https://xbtscan.org" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
