--- a/frontend/src/index.mempool.onbtc.html
+++ b/frontend/src/index.mempool.onbtc.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://luckyscan.org/resources/onbtc/onbtc-preview.jpg"
+      content="https://xbtscan.org/resources/onbtc/onbtc-preview.jpg"
     />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="2000" />
@@ -35,7 +35,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://luckyscan.org/resources/onbtc/onbtc-preview.jpg"
+      content="https://xbtscan.org/resources/onbtc/onbtc-preview.jpg"
     />
     <meta name="twitter:domain" content="bitcoin.gob.sv" />
 
