--- a/frontend/src/index.mempool.onbtc.html
+++ b/frontend/src/index.mempool.onbtc.html
@@ -9,7 +9,7 @@
 
     <meta
       name="description"
-      content="The National XBT Office (ONLKY) of El Salvador under President @nayibbukele"
+      content="The National XBT Office (ONXBT) of El Salvador under President @nayibbukele"
     />
     <meta
       property="og:image"
@@ -20,7 +20,7 @@
     <meta property="og:image:height" content="1000" />
     <meta
       property="og:description"
-      content="The National XBT Office (ONLKY) of El Salvador under President @nayibbukele"
+      content="The National XBT Office (ONXBT) of El Salvador under President @nayibbukele"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@mempool" />
@@ -31,7 +31,7 @@
     />
     <meta
       name="twitter:description"
-      content="The National XBT Office (ONLKY) of El Salvador under President @nayibbukele"
+      content="The National XBT Office (ONXBT) of El Salvador under President @nayibbukele"
     />
     <meta
       name="twitter:image"
